<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.DetailSuperHero.DetailSuperHero">

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/partial_toolbar"
        />
    <ImageView
        android:id="@+id/imgHeroDetail"
        android:layout_below="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/tam_Margin"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/imgHeroDetail"
        android:layout_marginTop="@dimen/tam_MarginDouble"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/linearNombre"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtSubNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_NombreCompleto"
                android:fontFamily="@font/circularstd_black"
                android:textSize="@dimen/tam_textSub"
                />
            <TextView
                android:id="@+id/txtDetNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstd_medium"
                android:gravity="start"
                android:textSize="@dimen/tam_textDet" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/linearAlterEgo"
            android:layout_below="@id/linearNombre"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtSubAlterego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_Alterego"
                android:fontFamily="@font/circularstd_black"
                android:textSize="@dimen/tam_textSub"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstd_medium"
                android:textSize="@dimen/tam_textDet"
                android:id="@+id/txtDetAlterego"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/linearAparicion"
            android:orientation="horizontal"
            android:layout_below="@id/linearAlterEgo"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtSubPrimeraAp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_PrimeraAp"
                android:fontFamily="@font/circularstd_black"
                android:textSize="@dimen/tam_textSub"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstd_medium"
                android:textSize="@dimen/tam_textDet"
                android:id="@+id/txtDetPrimeraAp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearPublicado"
            android:layout_below="@id/linearAparicion"
            >
            <TextView
                android:id="@+id/txtSubPublicadoPor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_PublicadoPor"
                android:fontFamily="@font/circularstd_black"
                android:textSize="@dimen/tam_textSub"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstd_medium"
                android:textSize="@dimen/tam_textDet"
                android:id="@+id/txtDetPublicadoPor"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearTrabajaEn"
            android:layout_below="@id/linearPublicado"
            >
            <TextView
                android:id="@+id/txtSubTrabajaEn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_TrabajaEn"
                android:fontFamily="@font/circularstd_black"
                android:textSize="@dimen/tam_textSub"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstd_medium"
                android:textSize="@dimen/tam_textDet"
                android:id="@+id/txtDetTrabajaEn"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearUbicacion"
            android:layout_below="@id/linearTrabajaEn"
            >
            <TextView
                android:id="@+id/txtSubUbicacionTrabajo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_TrabajoUbicacion"
                android:fontFamily="@font/circularstd_black"
                android:textSize="@dimen/tam_textSub"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstd_medium"
                android:textSize="@dimen/tam_textDet"
                android:id="@+id/txtDetUbicacionTrabajo"
                />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>